# FitGirl-Scrap-Web

./: .gitignore  README.md  docker-compose.yml
nginx/: Dockerfile  nginx.conf
redis/data/: dump.rdb
rustcrap/: .gitignore  Cargo.toml  output.csv
rustcrap/src/: main.rs
web/: .dockerignore  .envproduction  .eslintrc.cjs  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
web/myapp/: package.json
web/src/: app.css  app.postcss
web/src/lib/: redis.ts  types.ts
web/src/lib/components/: game.svelte  noresults.svelte  searchbar.svelte
web/src/lib/server/: redis.ts
web/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte  +page.ts  emoji.ts  redis.ts
web/src/routes/games/: +page.ts
web/src/routes/games/[page]/: +page.server.ts  +page.svelte
web/src/routes/search/: +page.server.ts  +page.svelte
