[package]
name = "fitgirl-ruscrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
headless_chrome = "1.0.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
select = "0.6.0"
serde = "1.0.188"
