[package]
name = "fitgirl-ruscrap"
version = "0.1.0"
edition = "2021"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
headless_chrome = "1.0.5"
reqwest = { version = "0.11.20", features = ["blocking"] }
scraper = "0.17.1"
select = "0.6.0"
tokio = { version = "1.32.0", features = ["full"] }
redis-macros = "0.2.1"
redis = { version = "0.23.3", features = ["json", "async-std-comp", "tokio-comp"] }
serde = "1.0.188"
serde_json = "1.0.107"
nanoid = "0.4.0"
